org.mmisw.ont - Ontology and Term URI resolver 
Carlos Rueda - MMI / MBARI
$Id$

ChangeLog

2010-10-28  2.0.14.beta
	- Updated ReadMe documentation.
	
2010-10-27  2.0.14.beta
	- #287 "concurrency" - AdminDispatcher: now thread-safe.
		
	- Misc: build.xml: added deploy-war target
	
2010-10-26  2.0.14.beta
	#287 "concurrency"
	Continuing with more load testing using JMeter and code clean-up and adjustments
	for thread-safety.
	
	= SPARQL queries =
		Users: 5
		Ramp-up period: 0
		Loop count: 100
		Request: /ont?sparql=SELECT  ?s ?p ?o WHERE {?s ?p ?o. } LIMIT 20   <-- ENCODED
		==>  OK
		
		Users: 30
		Ramp-up period: 0
		Loop count: 100
		Request: /ont?sparql=SELECT  ?s ?p ?o WHERE {?s ?p ?o. } LIMIT 20   <-- ENCODED
		==>  OK

	= General =
	
		- I'm including some net.jcip.annotations.* [1] annotations, especially to 
		facilitate the related diagnostics generated by FindBugs [2]. So, the actual
		thread-safety will not be initially guaranteed.
		[1] http://www.javaconcurrencyinpractice.com/
		[2] http://findbugs.sourceforge.net/
		
		- Some documentation about effective singletons used by OntServlet.
		
		
2010-10-26  2.0.13.beta
	Some code refactoring to facilitate investigation of #287 "concurrency"
	- Made class OntServlet.Request top-level and renamed it to OntRequest
	- Db.closeConnection(Connection) replaced with closeStatementAndConnection(Statement, Connection)
	
	
	= Adjustments/Fixes for thread-safety =
	
	OntServlet:
		OntRequest object maintained in a ThreadLocal variable.
		
	UriResolver2:
		Member ontRequest was not properly shared. Now the ontRequest object is obtained
		from the ThreadLocal variable maintained by OntServlet.
		
	The following test plans (using JMeter) caused NPE sometimes due to concurrency, but 
	they are now completing successfully (run on my laptop deployment):
	 
		Users: 30
		Ramp-up period: 0
		Loop count: 200
		Request: /ont/cf-small/parameter.owl
		==> OK, no exceptions at all.
			
		Users: 30
		Ramp-up period: 0