@@ -20,8 +20,12 @@ import org.mmisw.ont.sparql.SparqlDispatcher;
  * TODO rename this class to EntityUriDispatcher.
  * 
  * <p>
- * Note: This class is efectively a singleton as it is only intantiated once by {@link OntServlet}
+ * Note: This class is effectively a singleton as it is only instantiated once by {@link OntServlet}
  * (ie., the singleton-ness is not forced here).
+ * 
+ * <p>
+ * Thread-safety: This class may not be strictly thread-safe, but it is "effectively thread-safe"
+ * in conjunction with {@link OntServlet} and other callers. 
  * 
  * @author Carlos Rueda
  * @version $Id$
